# edipack2triqs

./: .buildinfo  .flake8  .gitignore  ChangeLog.html  LICENSE.txt  README.md  TODO.md  about.html  documentation.html  examples.html  genindex.html  index.html  install.html  issues.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.conda/: meta.yaml
.github/workflows/: conda-publish.yml  deploy-docs.yml  test-ubuntu.yml  test.yml
_modules/: edipack2triqs.html  index.html
_modules/edipack2triqs/: bath.html  fit.html  solver.html
_sources/: ChangeLog.md.txt  about.rst.txt  documentation.rst.txt  index.rst.txt  install.rst.txt  issues.rst.txt
conda/: meta.yaml
doc/: ChangeLog.md  conf.py  documentation.rst  examples.rst  index.rst  install.rst
doc/_static/css/: custom.css
doc/_templates/: sideb.html
doc/sphinxext/sphinx_autorun/: __init__.py
doc/sphinxext/triqs_example/: triqs_example.py
edipack2triqs/: __init__.py  bath.py  fit.py  hamiltonian.py  solver.py  util.py
example/: 3orbital2bath.py  ahm_triqs.py  attractive_hubbard_model.py  aux_funx.py
tests/: conftest.py  reference.py  test_fit_bath.py  test_hamiltonian.py  test_solver.py  test_solver_bath_basis.h5  test_solver_bath_basis.py  test_solver_general.h5  test_solver_general.py  test_solver_hybrid.h5  test_solver_hybrid.py  test_solver_hybrid_nspin1.py  test_solver_hybrid_nspin2.py  test_solver_nobath.h5  test_solver_nobath.py  test_solver_normal.h5  test_solver_normal.py  test_solver_normal_nspin1.py  test_solver_normal_nspin2.py  test_solver_nspin1_hybrid.py  test_solver_nspin1_normal.py  test_solver_nspin2_hybrid.py  test_solver_nspin2_normal.py  test_solver_phonons.py  test_solver_sectors.h5  test_solver_sectors.py  test_util.py
