[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "edipack2triqs"
version = "0.11.0"
description = "Compatibility layer between EDIpack and TRIQS"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["edipack", "edipack2py", "triqs"]
authors = [
    {name = "I. Krivenko", email = "iskrivenko@proton.me" },
    {name = "L. Crippa", email = "crippa.lorenzo@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = ["edipack2py>=5.4.2",
                "numpy",
                "mpi4py",
                "networkx"]

[project.urls]
"Source" = "https://github.com/krivenko/edipack2triqs/"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mpi>=0.5.0"
]
lint = [
    "pytest>=8.0.0",
    "flake8>=7.0.0"
]
docs = [
    "Sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinxfortran-ng>=0.3.0",
    "nbsphinx>=0.9.0",
    "myst-parser>=1.0.0",
    "matplotlib>=3.0.0",
    "linkify-it-py>=2.0.0",
    "enum_tools>=0.10.0"
]
